--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,16 @@
-.App {
-  text-align: center;
-  padding: 5% 35%;
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .App {
+    text-align: center;
+    padding: 5% 5%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .App {
+    text-align: center;
+    padding: 5% 35%;
+  }
 }
 
 .ui.button.AppButton {
