--- a/src/App.css
+++ b/src/App.css
@@ -19,10 +19,18 @@
 }
 
 .flynn {
-  margin-left: 15px;
   position: fixed;
   bottom: 0px;
   max-width: 10%;
+  height: auto;
+  z-index: 10;
+}
+
+.rapunzel {
+  position: fixed;
+  top: 0px;
+  right: 10px;
+  max-width: 18%;
   height: auto;
   z-index: 10;
 }
